# pingo-api

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  app.py  requirements.txt  setup.cfg
.github/workflows/: ci.yml
pingo_api/: __init__.py  app.py
pingo_api/scraper/: __init__.py  _base.py  _cuisineaz.py  _jdf.py  _marmiton.py  _sccg.py  base.py  cuisineaz.py  jdf.py  marmiton.py  recette.py  sccg.py
test/: test_recettes.py
