[metadata]
name = pingo-api
version = 0.0.1
author = Keurcien Luu et al.
email = keurcien.luu@gmail.com
description = Pingo API
url = https://github.com/keurcien/pingo-api
project_urls =
    Code=https://github.com/keurcien/pingo-api
    Issues=https://github.com/keurcien/pingo-api/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    importlib_metadata
    waitress==1.4.3
    beautifulsoup4==4.9.0
    requests==2.23.0
    falcon==2.0.0
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel